--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -6,9 +6,9 @@ html
     link(rel='stylesheet', href='css/main.css')
   body
     #content
-    block content
+      block content
     each script in scripts
-      script(type='javascript/text', src='#{script}')
-    script(type='javascript/text', src='js/script.js')
+      script(type='text/javascript', src='#{script}')
+    script(type='text/javascript', src='js/script.js')
 
 
