content indenation and javascript atrrib

--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -5,6 +5,6 @@ html
     link(rel='stylesheet', href='css/main.css')
   body
     #content
-    block content
-    script(type='javascript/text', src='js/script.js')
+      block content
+    script(type='text/javascript', src='js/script.js')
 
